# privman

./: AUTHORS  ChangeLog  NEWS  ProjectHome.md  automake.txt  config.h.in
docs/: Privman-html.tgz
etc/: Makefile.am  check_user  mycat
man/: Makefile.am  priv_bind.3.in  priv_custom.3.in  priv_fopen.3.in  priv_open.3.in  priv_popen.3.in  priv_respawn_as.3.in  privman_conf.5.in
src/: Makefile.am  Makefile.in  config_lex.ll  config_parse.yy  msghdr.c  msghdr.h  privman.cc
tests/: Makefile.in  check_user.c  mycat2.c  myecho2.c  myexec.c
trunk/: LICENSE  Makefile.am  README  TODO  acinclude.m4  autogen.sh  configure.in
trunk/config/: Makefile.am
trunk/docs/: Privman-2.ppt
trunk/etc/: microb  myecho  myexec  mypopen  myrerun  privman.conf
trunk/man/: Makefile.in  priv_daemon.3.in  priv_execve.3.in  priv_fork.3.in  priv_init.3.in  priv_pam.3.in  priv_rerunas.3.in  priv_wait4.3.in  privman.7.in
trunk/src/: config_lex.ll  priv_client.cc  priv_impl.h  privman.h.in  types.h
trunk/tests/: Makefile.am  microb.c  mycat.c  myecho.c  myecho6.c  mypopen.c  myrerun.c
